Fix back to top link z-index

--- a/web/themes/custom/citizen_dart/components/03-composites/layout/footer/_footer.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/layout/footer/_footer.scss
@@ -67,7 +67,7 @@
     position: absolute;
     top: -30px;
     right: 20px;
-    z-index: 500;
+    z-index: 1;
     border-radius: 50%;
     background-color: $white;
     border-radius: 50%;
